--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Brian's Adventures</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">HOME</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -246,17 +246,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Follow me!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Want to get in contact? Want to know what I've been up to? Follow me on social media or send me an email!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                <div class="col-md-3 text-center">
+                    <a href="https://www.instagram.com/briannnnfong/" target="_blank"><i class="fa fa-instagram fa-5x sr-contact"></i>
+                    <p>Instagram</p></a>
                 </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                <div class="col-md-3 text-center">
+                    <a href="https://www.snapchat.com/download" target="_blank"><i class="fa fa-snapchat fa-5x sr-contact"></i>
+                    <p>@fongbrian</p></a>
+                </div>
+                <div class="col-md-3 text-center">
+                    <a href="https://www.youtube.com/channel/UCeSCufLBK9Xru8o-usC-m8g" target="_blank"><i class="fa fa-youtube fa-5x sr-contact"></i>
+                    <p>Youtube</p></a>
+                </div>     
+                <div class="col-md-3 text-center">
+                    <a href="mailto:brianfong24@gmail.com"><i class="fa fa-envelope-o fa-5x sr-contact"></i>
+                    <p>Email</p></a>
                 </div>
             </div>
         </div>
