--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     <title>Brian's Adventures</title>
 
+    <!-- sets a different background picture on each page -->
+    <style type="text/css">
+        header {background-image:url(img/header.jpg);"}
+    </style>
+
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,15 +28,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/creative.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    <link href="css/creative.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -51,10 +48,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#adventures">Adventures</a>
+                        <a class="page-scroll" href="#adventures">My Adventures</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -81,12 +78,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Software engineer. Food lover. Sports fanatic. <br>TV show binger. Amateur adventure seeker.</h2>
+                    <img src="img/me.png" style="border-radius:250px;"/><br><br>
+                    <h2 class="section-heading">Software engineer. Food lover. Sports fanatic. <br>TV show binger. Amateur traveler/adventure seeker.</h2>
                     <hr class="light">
-                    <p class="text-faded">My name is Brian. A little about myself: I was born and raised in the Bay Area, graduated from the University of California, San Diego in 2016 with a B.S. in Computer Science, and now I am currently working as a software engineer in Los Angeles. I am a huge sports fan (<span style="color:yellow">Go Lakers!</span>), I love food, and I watch a lot of TV shows.<br><br>
+                    <p class="text-faded">My name is Brian. I was born and raised in the Bay Area, graduated from the University of California, San Diego in 2016 with a B.S. in Computer Science, and now I am currently working as a software engineer in Los Angeles. I am a huge sports fan (<span style="color:yellow">Go Lakers!</span>), I love food, and I watch <u>a lot</u> of TV shows.<br><br>
 
-                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many recent memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. This page has all the information about my travels (domestic and international), so check out where I've been and join me on this adventure!</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. This page has all the information about my travels (big or small, domestic and international), so check out where I've been and join me on this adventure!</p>
+                    <a href="#adventures" class="page-scroll btn btn-default btn-xl sr-button">My Adventures</a>
                 </div>
             </div>
         </div>
@@ -96,15 +94,30 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
+                        <img src="img/snowvalley/snowvalley_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SNOW VALLEY RESORT, CA
+                                </div>
+                                <div class="project-category text-faded">
+                                    JANUARY 2017
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="trips/tokyo.html" class="portfolio-box">
+                        <img src="img/tokyo/tokyo_front.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    TOKYO, JAPAN
+                                </div>
+                                <div class="project-category text-faded">
+                                    DECEMBER 2016
                                 </div>
                             </div>
                         </div>
@@ -112,49 +125,20 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                        <img src="img/sandiego/sandiego_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SAN DIEGO, CA
+                                </div>
+                                <div class="project-category text-faded">
+                                    JUNE 2014 - SEPTEMBER 2014
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                <!-- 
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
@@ -184,7 +168,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -204,15 +188,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Follow me!</h2>
                     <hr class="primary">
-                    <p>Want to get in contact? Want to know what I've been up to? Follow me on social media or send me an email!</p>
+                    <p>Want to get in contact? Want to know what I've been up to? Want to connect? Follow me on social media or send me an email!</p>
                 </div>
                 <div class="col-md-3 text-center">
                     <a href="https://www.instagram.com/briannnnfong/" target="_blank"><i class="fa fa-instagram fa-5x sr-contact"></i>
                     <p>Instagram</p></a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <a href="https://www.snapchat.com/download" target="_blank"><i class="fa fa-snapchat fa-5x sr-contact"></i>
-                    <p>@fongbrian</p></a>
+                    <a href="https://www.linkedin.com/in/brianjfong" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>
+                    <p>LinkedIn</p></a>
                 </div>
                 <div class="col-md-3 text-center">
                     <a href="https://www.youtube.com/channel/UCeSCufLBK9Xru8o-usC-m8g" target="_blank"><i class="fa fa-youtube fa-5x sr-contact"></i>
@@ -235,7 +219,7 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
