--- a/index.html
+++ b/index.html
@@ -83,17 +83,27 @@
                     <hr class="light">
                     <p class="text-faded">My name is Brian. I was born and raised in the Bay Area, graduated from the University of California, San Diego in 2016 with a B.S. in Computer Science, and now I am currently working as a software engineer in Los Angeles. I am a huge sports fan (<span style="color:yellow">Go Lakers!</span>), I love food, and I watch <u>a lot</u> of TV shows.<br><br>
 
-                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. This page has all the information about my travels (big or small, domestic and international), so check out where I've been and join me on this adventure!</p>
+                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. This page has all the information about my travels (big or small, domestic and international) as well as outings of any sort with friends or coworkers, so check out where I've been and join me on this adventure!</p>
                     <a href="#adventures" class="page-scroll btn btn-default btn-xl sr-button">My Adventures</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="no-padding" id="adventures">
+    <aside  id="adventures">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">My Adventures</h2>
+                    <hr class="dark">
+                </div>
+            </div>
+        </div>
+    </aside>
+    <section class="no-padding">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
                         <img src="img/snowvalley/snowvalley_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -108,7 +118,24 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+
+                <div class="col-lg-6 col-sm-6">
+                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    MAGIQ ESCAPE ROOM, LOS ANGELES, CA
+                                </div>
+                                <div class="project-category text-faded">
+                                    DECEMBER 2016
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-6 col-sm-6">
                     <a href="trips/tokyo.html" class="portfolio-box">
                         <img src="img/tokyo/tokyo_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -123,7 +150,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
                         <img src="img/sandiego/sandiego_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -142,21 +169,6 @@
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -210,6 +222,9 @@
         </div>
     </section>
 
+    <!-- website hit counter (not unique) -->
+    <div style="text-align:right;"><img src="http://www.reliablecounter.com/count.php?page=bjfong.github.com&digit=style/plain/13/&reloads=0" alt="" title="" border="0"></div>
+
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
@@ -223,7 +238,6 @@
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
-
 </body>
 
 </html>
