Added pages for other trips, pictures on front page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <hr class="light">
                     <p class="text-faded">My name is Brian. I was born and raised in the Bay Area, graduated from the University of California, San Diego in 2016 with a B.S. in Computer Science, and now I am currently working as a software engineer in Los Angeles. I am a huge sports fan (<span style="color:yellow">Go Lakers!</span>), I love food, and I watch <u>a lot</u> of TV shows.<br><br>
 
-                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. This page has all the information about my travels (big or small, domestic and international) as well as outings of any sort with friends or coworkers, so check out where I've been and join me on this adventure!</p>
+                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. This page has all the information about my travels (big or small, domestic and international) or even just outings with friends or coworkers, so check out where I've been and join me on this adventure!</p>
                     <a href="#adventures" class="page-scroll btn btn-default btn-xl sr-button">My Adventures</a>
                 </div>
             </div>
@@ -120,12 +120,12 @@
                 </div>
 
                 <div class="col-lg-6 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="trips/magiq.html" class="portfolio-box">
+                        <img src="img/magiq/magiq_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    MAGIQ ESCAPE ROOM, LOS ANGELES, CA
+                                    MAGIQ ESCAPE ROOM, LOS ANGELES
                                 </div>
                                 <div class="project-category text-faded">
                                     DECEMBER 2016
@@ -151,7 +151,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
+                    <a href="trips/sandiego.html" class="portfolio-box">
                         <img src="img/sandiego/sandiego_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -223,7 +223,11 @@
     </section>
 
     <!-- website hit counter (not unique) -->
-    <div style="text-align:right;"><img src="http://www.reliablecounter.com/count.php?page=bjfong.github.com&digit=style/plain/13/&reloads=0" alt="" title="" border="0"></div>
+    <div style="text-align:right;">
+        <span id="disclaimer" class="page-scroll" title="Unless otherwise specified by me, all images used on this page are found on Google."><i class="fa fa-info-circle fa-1.5x" aria-hidden="true"></i></span>
+
+        <img src="http://www.reliablecounter.com/count.php?page=bjfong.github.com&digit=style/plain/13/&reloads=0" alt="" title="" border="0">
+    </div>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
