Added descriptions for magiq but need pictures and captions

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    SNOW VALLEY RESORT, CA
+                                    SNOW VALLEY MOUNTAIN RESORT, CALIFORNIA
                                 </div>
                                 <div class="project-category text-faded">
                                     JANUARY 2017
@@ -156,7 +156,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    SAN DIEGO, CA
+                                    SAN DIEGO, CALIFORNIA
                                 </div>
                                 <div class="project-category text-faded">
                                     JUNE 2014 - SEPTEMBER 2014
@@ -212,7 +212,7 @@
                 </div>
                 <div class="col-md-3 text-center">
                     <a href="https://www.youtube.com/channel/UCeSCufLBK9Xru8o-usC-m8g" target="_blank"><i class="fa fa-youtube fa-5x sr-contact"></i>
-                    <p>Youtube</p></a>
+                    <p>YouTube</p></a>
                 </div>     
                 <div class="col-md-3 text-center">
                     <a href="mailto:brianfong24@gmail.com"><i class="fa fa-envelope-o fa-5x sr-contact"></i>
@@ -224,7 +224,7 @@
 
     <!-- website hit counter (not unique) -->
     <div style="text-align:right;">
-        <span id="disclaimer" class="page-scroll" title="Unless otherwise specified by me, all images used on this page are found on Google."><i class="fa fa-info-circle fa-1.5x" aria-hidden="true"></i></span>
+        <span id="disclaimer" class="page-scroll" title="Disclaimer: Unless otherwise specified by me, all images used on this page are found on Google Images. All these pictures are owned by their respective owners."><i class="fa fa-info-circle fa-1.5x" aria-hidden="true"></i></span>
 
         <img src="http://www.reliablecounter.com/count.php?page=bjfong.github.com&digit=style/plain/13/&reloads=0" alt="" title="" border="0">
     </div>
