--- a/trips/magiq.html
+++ b/trips/magiq.html
@@ -95,7 +95,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">How It All Began</h2>
                     <hr class="light">
-                    <p class="text-faded">Joel bought the tickets on Groupon. 7 engineers, Chip Isidro Joel Jorge Kyle Guillermo Me. </p>
+                    <p class="text-faded">My boss Joel bought the tickets on Groupon. The place is called <a style="color:black;" href="https://magiqescaperoom.com/los-angeles" target="_blank">MagIQ Escape Room</a> in LA. He thought it would be a good team building exercise and invited some coworkers to try it. He had done escape rooms before, trying three and completing one. I, on the other hand, had never done one before but I've always wanted to try. He settled on a date (December 20, 2016) and time (7pm) and difficuly (intermediate) and we were off! </p>
                 </div>
             </div>
         </div>
@@ -107,7 +107,17 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">The Trip</h2>
                     <hr class="light">
-                    <p class="text-faded">Pirate themed. Explain each room in high level. What door? Reference to westworld. Isidro with the mirror. Chip with the numbers. Kyle with the lamp and the magnet. Jorge with the eggs in the maze. Me with the bananas. Joel with the 1640 puzzle. Guillermo with the knob puzzle.</p>
+                    <p class="text-faded">I'll explain the details in a high-level manner, just in case anyone decides to try out this room. I wouldn't want to give it away! So if you're reading this and want to try the room someday, look away! <br><br>
+
+                    (Okay I warned you) There were seven people who went: Joel, Chip, Isidro, Jorge, Kyle, Guillermo, and myself. The room was pirate-themed and the objective was to 1) get out of a jail cell and 2) find the treasure which will lead us out of the room. We had an hour to exit the room. The only things they give you are a light, a pen and a paper to write things.<br><br>
+
+                    In the first part, we were in a small jail cell. There was a mirror, a picture of a cannon and some arrows, and three compasses. We were stuck for about 15-20 minutes, but eventually Isidro used the mirror to see words on top of the cell that were out of our view. We saw three directions that we put into the three compasses and the box opened, containing a bunch of sticks. We attached the sticks together to form a long stick and used it to pluck the key from outside the cell. We got the key and unlocked the cell.<br><br>
+
+                    In the second part, we were in a bigger room with a couple barrels, a desk, a tree with more arrows, a boat with more arrows, a circular maze that can be spinned by a wheel, and a cog that mapped one letter to one number. Chip was able to get the 4-digit combination to open the lock behind the circular maze. We unlocked the lock and found twelve letters. We saw a couple of these letters all around the room and on other objects (some inside the desk, one on the paddle, some inside eggs in the circular maze, etc...). We figured out what letters we had found, and the ones that were left were L, A, M, and P. We used the cog to map each letter to a number, and Kyle used those numbers from LAMP to unlock the door to another room (I swear I tried that combination and it didn't work, I guess I suck at locks). We were stuck in this room for a while too, it took maybe 15-20 minutes as well.<br><br>
+
+                    In the third part, we were on a beach setting, and there was so much going on, but we were getting the hang of it. Behind the door, there was a linear equations type picture with fruits. We calculated what each fruit's number was and tried it in a 3-digit lock but it didn't work. Kyle and Guillermo worked on getting a key out of a maze via magnet. I looked back at the equations and saw that bananas was 40 but in the last equation, there were only three bananas and not four. Four bananas was 40 so three bananas was 30. The total was 140 instead of 150. I tried it on the lock but it didn't work. Then Joel opened a lock in the previous room that was inside the desk using 140. Inside were pieces of a puzzle that we put together. On the completed puzzle was a treasure map, but after a while, Joel saw the giant numbers on top of the puzzle: "1640". We used that to open another lock, opening a pattern of sorts and skeleton bones. This was what the pictures and arrows were used for. We followed the arrows for each pictures, resulting in a number. We used these numbers to open the second of two locks and went into another room.<br><br>
+
+                    In this final part, we saw a skeleton, a knob in a puzzle against the wall, and a glass case. Kyle saw the key in the back left corner and used some wire to get it out. Guillermo got the knob out of the wall, and we used both to open a treasure case that had a bunch of keys. Joel realized that none of the keys worked on the door (they were too big) but a little later, he saw that there was another normal key attached as well. He used that key to open the door, and it opened! We were out!</p>
                 </div>
             </div>
         </div>
@@ -177,11 +187,12 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p>Not many pictures</p></li>
-                            <li><p>Spent 20 minutes on the first clue in the jail, but after we got out, we were getting the hang of it and by the end, we were breezing through it</p></li>
-                            <li><p>I'm bad at these but thankfully 7 people who solve logical problems together help a lot</p></li>
-                            <li><p>I don't know how to use combination locks and I need glasses; couldnt see the e LOL</p></li>
-                            <li><p>42nd group to complete without any clues out of ~2000 groups. Finished in 49 minutes.</p></li>
+                            <li><p>We were the 42nd group to complete that room without any clues out of ~2,000 groups.</p></li>
+                            <li><p>We finished in 49 minutes, with 11 minutes to spare. I think we should've finished earlier but I don't know how to unlock a lock -_-</p></li>
+                            <li><p>We spent the most time on the first clue in the jail, but after we got out, we were getting the hang of it and by the end, we were breezing through it. I didn't know how people solved certain parts of the puzzle because it was just chaos, but hey, as long as it gets solved, I have no problems with how it happened.</p></li>
+                            <li><p>I'm bad at these kind of things but thankfully seven people who solve logical problems for a living working together help a lot.</p></li>
+                            <li><p>I always knew I needed better contacts but I confirmed it now. There was an "e" in the ceiling and the host told us after. I told her I couldn't see it and she said I needed glasses.</p></li>
+                            <li><p>We got Komodo afterwards and I tried the phorrito for the first time. It was pretty good (and really spicy) but I'd rather eat it in soup form.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -197,10 +208,8 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>Just the small details that go into the design behind this. You really have to have a balance of taking small details into account while at the same time not overthinking something's importance to solving the puzzle.</p></li>
+                            <li><p>It really tested our teamwork and knowledge. We worked off each other and we all chipped in to solve this together. We definitely bonded after this and we'd be down to go another one.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -216,10 +225,7 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p>Nothing?</p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>I guess there's nothing that I disliked because we completed it!</p></li>
                         </ul>
                     </p>
                 </div>
@@ -235,10 +241,9 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>We scheduled the room at 7pm but we all got there half an hour or so earlier, so we started earlier. Thankfully there was no one before us so we finished earlier so we could go to Komodo before it closed.</p></li>
+                            <li><p>The more people the better, definitely. You need to be able to bounce ideas off each other and utilize teamwork to get it done within the time allowed. Just make sure you work well with the people you go with and that you don't end up blaming each other afterwards.</p></li>
+                            <li><p>Try not to be tempted to ask for hints. They give you a walkie talkie so you can ask for as many hints as you need but it just feels so much better to keep at it and don't give in to the temptation.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -252,7 +257,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Final Thoughts</h2>
                     <hr class="light">
-                    <p class="text-faded">It was a fun experience. I'm mainly happy with this because we completed it. <i class="fa fa-square-o" aria-hidden="true"></i></p>
+                    <p class="text-faded">It was a fun experience! I'm mainly happy with this because we completed it. If we didn't complete it, I probably wouldn't put this on here haha but I'm glad it all worked out! <i class="fa fa-square-o" aria-hidden="true"></i></p>
                     <br><br><a href="../index.html#adventures" class="btn btn-default btn-xl page-scroll">Back to all adventures</a>
                 </div>
             </div>
