--- a/trips/sandiego.html
+++ b/trips/sandiego.html
@@ -219,10 +219,7 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>I got sunburnt one time. That's about it.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -238,7 +235,7 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
+                            <li><p>The food. Tacos el Gordo, Phil's, Oscar's, Bahn Thai, Vallarta. This is our tier one list of places to go and you need to go. Gordos, Phil's, and Oscar's are consistently on Yelp's Top 100 restaurants lists. Bahn Thai and Vallarta are San Diego local secrets. You're welcome.</p></li>
                             <li><p></p></li>
                             <li><p></p></li>
                             <li><p></p></li>
