--- a/trips/tokyo.html
+++ b/trips/tokyo.html
@@ -197,7 +197,7 @@
                             <li><p>That same night, when we got back to the Airbnb, I took off my contacts and passed out. The next morning, the others told me that I was sleepwalking, trying to find my glasses and phone and was looking in my imaginary pockets and was pulling imaginary drawers. I don't remember any of that.</p></li>
                             <li><p>Kyle met up with a Japanese girl on the day we left. He went to lunch with her and said that she was coming to LA on Christmas and they will probably see each other again ;)</p></li>
                             <li><p>After we got back, we went to a happy hour, and my boss' boss saw us talking to each other and he said, "You guys aren't tired of each other?!" To which Emi replied, "We like each other even more now!" He had a hilarious look of (playful) disgust on his face.</p></li>
-                            <li><p>Souvenirs: Suntory Whiskey and a shot glass for myself; Green tea kit kat and a sword keychain for Brian Chin; a magnet for Adrienne; Green tea kit kat and melon kit kat for Jessica and Eliott; Green tea kit kat and Tokyo Tower keychain for Brian Mendoza; Two mugs for my parents.</p></li>
+                            <li><p><u>Souvenirs</u>: Suntory Whiskey and a shot glass for myself; Green tea kit kat and a sword keychain for Brian Chin; a magnet for Adrienne; Green tea kit kat and melon kit kat for Jessica and Eliott; Green tea kit kat and Tokyo Tower keychain for Brian Mendoza; Two mugs for my parents.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -221,7 +221,9 @@
                             <li><p>Unlimited free alcoholic drinks on the plane! Gotta say it again.</p></li>
                             <li><p>You order your food from vending machines! Saves a lot of time and takes away a lot of the messiness that comes with money after you eat. You pick what you want, you pay, you give the worker your ticket, you eat, and then you leave.</p></li>
                             <li><p>There's no tax and people don't tip. Even less messiness.</p></li>
+                            <li><p>The tax-free concept. Some stores are tax-free if you spend a certain amount of money and some stores are tax-free for foreigners if you show a passport.</p></li>
                             <li><p>How cheap the food is there. Authentic ramen for $8?! Yes please.</p></li>
+                            <li><p>How the only Japanese words I knew were hello, thank you, and beer. I just bowed most of the time.</p></li>
                             <li><p>Small portions. I guess I'm not used to it, but this is a positive because I was never too full so I could try more things.</p></li>
                         </ul>
                     </p>
@@ -239,7 +241,8 @@
                     <p>
                         <ul class="text-faded">
                             <li><p>Our Mt. Fuji tour. Maybe I expected more or the sun was in the way but the view that we got wasn't good. We got close but the pictures we took didn't catch how nice it looked. The one further away looked better. Our tour guide was great though.</p></li>
-                            <li><p>Drinks are very watered down. Even some whiskey on-the-rocks had some water in it. Also, the beers are like 4.5% alcohol, that's no fun and I just have to pee more to get drunk.</p></li>
+                            <li><p>Drinks are very watered down. Even some whiskey drinks had water in it. Also, the beers have low alcohol % that just means I just have to pee more in order to get drunk.</p></li>
+                            <li><p>How they're very strict about where they put their trash and their recyclables. This is because I'm personally not used to it so I was a little confused, but it's good for the environment.</p></li>
                             <li><p>Tinder isn't fun. I only got one match, but from Kyle's experiences, it seems like they're nicer and more likely to talk to you than girls in the U.S.</p></li>
                             <li><p>Little to no trash cans. I understand <a href="https://www.quora.com/Why-does-Tokyo-have-so-few-public-trash-cans" target="_blank">why</a> they do that, but it's still frustrating when I'm holding my trash for half an hour and still can't find a trash can.</p></li>
                             <li><p>How you use one bill and you get a ton of coins in return. I'm not the best with coins and didn't have anywhere safe to put them, so they kept dropping from my pocket.</p></li>
@@ -259,6 +262,7 @@
                     <p>
                         <ul class="text-faded">
                             <li><p>If you know someone who speaks Japanese, it helps a lot when talking to those who may not know any English. You don't need to point and if that person is a local, you get the best recommendations.</p></li>
+                            <li><p>Bring a booklet or download an app on your phone that allows you to translate common English phrases for tourists into Japanese. I personally didn't use one but I downloaded one and it seemed like it would be helpful to use to get around.</p></li>
                             <li><p>Three days or so is enough in Tokyo. If you're going for a week like I did, go to Kyoto for a couple days. it's a lot more traditional and the night life is not as big, but it's different. Because it's more traditional and old-school, fewer people might know English so that's why having someone who knows Japanese will be helpful.</p></li>
                             <li><p>Either get a sim card at the airport which is like $35 for 1.5GB of data, or get a hotspot which is $55 for unlimited data. I got the AT&T international plan which was $40 for 200MB which was not worth it at all compared to the others. The only thing is I had unlimited text and the other two options don't, but why need to text when there are so many other messaging apps nowadays? I piggybacked off Emi's hotspot so I didn't go over, and that's what I will get next time. Your group can all pitch in for a hotspot, but be aware that it won't go too far and you will most likely split up, so I would still say get your own form of data so you can communicate with other people when you split from the group.</p></li>
                             <li><p>Bring cash! A lot of the mom and pop stores only accept cash and your cards most likely have a foreign transaction fee. Just hope that when you exchange it back to USD that you get a decent rate.</p></li>
@@ -275,7 +279,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Final Thoughts</h2>
                     <hr class="light">
-                    <p class="text-faded">This was a great trip to dip my feet in. I loved everything about my experience in Japan, and I would definitely go again. I would want to go to a country that I haven't been to first before going back to Japan, but if I went again, I would live in another area but definitely do most of the things I did last time. I miss the food so much and would go for the cheap food and drinks. I smile when I see pictures and I have many good memories. <i class="fa fa-square-o" aria-hidden="true"></i></p>
+                    <p class="text-faded">This was a great first trip to dip my feet in. I loved everything about my experience in Japan, and I would definitely go again. I would want to go to a country that I haven't been to first before going back to Japan, but if I went again, I would live in another area but definitely do most of the things I did last time. But of course, the company matters so much and I'm glad I went with people I got along with and I didn't ruin relations with them, especially my boss :) I can't wait to continue going on more trips. We already decided on going to Cuba next, so we'll see where that takes us. Most of all, I miss the food in Japan so much and would go only for the cheap food and drinks. Ramen + Sushi + Yakitori = Life <i class="fa fa-square-o" aria-hidden="true"></i></p>
                     <br><br><a href="../index.html#adventures" class="btn btn-default btn-xl page-scroll">Back to all adventures</a>
                 </div>
             </div>
