Added pictures and captions for Tokyo

--- a/trips/magiq.html
+++ b/trips/magiq.html
@@ -137,17 +137,17 @@
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <!-- <li data-target="#myCarousel" data-slide-to="1"></li> -->
+                        <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
+                        <!-- <li data-target="#myCarousel" data-slide-to="3"></li> -->
                         </ol>
                       
                         <figure class="item active text-faded">
-                          <img src="../img/header.jpg" alt="Chania">
-                            <figcaption>The atmosphere in Chania has a touch of Florence and Venice.</figcaption>
+                          <img src="../img/magiq/slideshow/1.jpg" alt="Chania" class="resize">
+                            <figcaption>A picture of the group after we completed the room.</figcaption>
                         </figure>
 
-                        <figure class="item text-faded">
+<!--                         <figure class="item text-faded">
                           <img src="../img/header.jpg" alt="Chania">
                             <figcaption>The atmosphere in Chania has a touch of Florence and Venice.</figcaption>
                         </figure>
@@ -160,7 +160,7 @@
                         <figure class="item text-faded">
                           <img src="../img/header.jpg" alt="Flower">
                             <figcaption>Beautiful flowers in Kolymbari, Crete.</figcaption>
-                        </figure>
+                        </figure> -->
                       </div>
 
                       <!-- Left and right controls -->
