--- a/trips/sandiego.html
+++ b/trips/sandiego.html
@@ -111,7 +111,7 @@
                     <hr class="light">
                     <p class="text-faded">I guess this was more of a three month trip, but I had never spent the summer in San Diego and I actually had a car with me this time (unlike during the school year) so I had a lot more freedom to do what I wanted.
 
-                    July 4 bbq, soccer and world cup, FOOOOOD Adrienne and the two best weekends of my life, Briana</p>
+                    July 4 bbq, soccer and world cup, FOOOOOD Adrienne and the two best weekends of my life, Briana, Victoria</p>
                 </div>
             </div>
         </div>
@@ -181,9 +181,9 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>Jon coming back from England study abroad and we drank beers behind the canyon at Warren.</p></li>
+                            <li><p>Living so close to the freeway and all the Asian food in Convoy area</p></li>
+                            <li><p>Living so close to work. Not even a 10 minute drive local time.</p></li>
                             <li><p></p></li>
                         </ul>
                     </p>
@@ -200,9 +200,9 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>9/80 schedule</p></li>
+                            <li><p>Hanging out with Brian all the time</p></li>
+                            <li><p>I was just confident with where I was in my life at the time. I was at peace with all the decisions I made. There was just so much spontaneity. I felt young and alive and I had so much fun.</p></li>
                             <li><p></p></li>
                         </ul>
                     </p>
